src/scss/_main-nav.scss
.page-header {
    //border: 1px solid black;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    // background-color: gray;
    background-color: rgba(17,17,17,.9);
    
    width: 100%;
    position: absolute; 
    z-index: 21;
    opacity: 0.9;
}

.page-header__logo {
    text-decoration: none;
    display: block;
    padding: 5px 15px;
    text-transform: uppercase;
    color: #dbb94b;
    display: flex;

    & img {
    height: 70px;
    }

    & span {
        vertical-align: middle;
        line-height: 70px;
    }
}

.main-nav__wrapper {
    height: 100%;
    display: flex;
    flex-direction: row;
}

.main-nav__list {
    list-style: none;
    display: flex;
    flex-direction: row;
    align-content: space-around;
    text-align: center;
    margin: 0;
    transition: all 0.2s ease;

}

.site-list__item {

    // border-right: 1px solid #000;
    border-right: 1px solid #dbb94b;;
    // padding: 20px 25px;
    position: relative;
    transition: all 0.2s ease;

    &:last-child {
        border: none;
    }

    & a {
        display: block;
        // color: black;
        color: #dbb94b;
        text-decoration: none;
        padding: 20px 25px;
        transition: all 0.2s ease;
    }

    &:hover {
        // background-color: rgb(90, 88, 88); 
        background-color: rgba(17,17,17,.9);
    }

    &:hover > a {
        color: white;
    }

    &:hover ul {
        display: block;
    }

}

.site-list__dropdown-list {
    padding: 0;
    // margin: 20px 0;
    position: absolute;
    display: none;
    left: 0;
    right: 0;
    // background-color: rgba($color: #949090, $alpha: 0.4);
    background-color: rgba(17,17,17,.9);
}

.site-list__dropdown-list li {
    list-style: none;

    &:hover {
        background-color: rgba(90, 88, 88, 0.6); 
    }

    & a {
        display: block;
        padding: 10px 0;
    }

    &:hover a {
        color: white;
    }
}

#bookNowButton {
    text-decoration: none;
    display: inline-block;
    color: white;
    text-transform: uppercase;
    vertical-align: middle;
    // padding: 15px 30px;
    height: 60px;
    width: 150px;   
    color: $golden-color;
    border: 2px solid $golden-color;
    line-height: 60px;
    text-align: center;

    &:hover {
        background: #dbb94bb9;
    }
}


@media (max-width: 992px) {
    .page-header {
        justify-content: space-around;

        padding: 0 20px;

    }

}

